MarcoKitTests/TestData/error/array1.marco
--before
[

--after
0-1: Unexpected end of file
